@@ -1,3 +1,12 @@
+2006-05-01  David Reveman  <davidr@novell.com>
+
+	* src/window.c (circulateWindow):
+	* src/event.c (handleEvent): Use getTopWindow instead of
+	reverseWindows->id as reverseWindows might be a destroyed window.
+
+	* include/compiz.h:
+	* src/screen.c: Add getTopWindow function that returns top window.
+
 2006-04-30  David Reveman  <davidr@novell.com>
 
 	* plugins/compiz.schemas: Regen.
